--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   </select>
                 </div>
                 <button class="btn btn-primary" onClick="upsertTask()">
-                  Submit
+                  Kirim
                 </button>
               </form>
             </div>
