--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="row" style="padding-top: 30px">
         <div class="col-sm-4">
           <div class="card">
-            <h5 class="card-header">Form Tasks</h5>
+            <h5 class="card-header">Buat Tasks</h5>
             <div class="card-body">
               <form method="GET">
                 <div class="form-group">
@@ -88,7 +88,7 @@
                   </select>
                 </div>
                 <button class="btn btn-primary" onClick="upsertTask()">
-                  Kirim
+                  Kirim Task
                 </button>
               </form>
             </div>
