--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                     id="statusPost"
                   >
                     <option selected>Select Status</option>
-                    <option value="0">Todo</option>
-                    <option value="1">In progress</option>
+                    <option value="0">To Do</option>
+                    <option value="1">In Progress</option>
                     <option value="2">Done</option>
                   </select>
                 </div>
@@ -96,7 +96,7 @@
         </div>
         <div class="col-sm">
           <div class="card">
-            <h5 class="card-header">List Tasks</h5>
+            <h5 class="card-header">Daftar Tasks</h5>
             <div class="card-body">
               <table class="table table-striped">
                 <thead>
